<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_marginTop="30dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp">

        <ImageView
            android:id="@+id/addReminderButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_baseline_watch_later_24"
            android:layout_gravity="center"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_reminder"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:gravity="center"
            />

    </LinearLayout>



    <TextView
        android:id="@+id/currentTargetTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_target"
        android:layout_gravity="center"
        android:textSize="26sp"
        android:textColor="@color/black"
        android:paddingTop="35dp"
        />
    <TextView
        android:id="@+id/drinkTodayTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_drink"
        android:layout_gravity="center"
        android:textSize="26sp"
        android:textColor="@color/black"
        android:paddingTop="35dp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:paddingTop="35dp"
        >

        <Button
            android:id="@+id/downButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="down"
            android:layout_margin="5dp"

            />
        <Button
            android:id="@+id/upButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="up"
            android:layout_margin="5dp"

            />

    </LinearLayout>







</LinearLayout>